<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/listaRicetteFragment"
        android:enabled="true"
        android:icon="@drawable/receipt_long_24px"
        android:title="@string/ricette" />
    <item
        android:id="@+id/birreFragment"
        android:enabled="true"
        android:icon="@drawable/beer_icon"
        android:title="@string/birre" />
    <item
        android:id="@+id/cosaDevoPreparareOggiFragment"
        android:enabled="true"
        android:icon="@drawable/lightbulb_24px"
        android:title="@string/brew_day" />
    <item
        android:id="@+id/gestisciAttrezziFragment"
        android:enabled="true"
        android:icon="@drawable/tools"
        android:title="@string/attrezzi" />
    <item
        android:id="@+id/ingredientiFragment"
        android:enabled="true"
        android:icon="@drawable/scale_24px"
        android:title="@string/ingredienti" />
</menu>