...
    <string name="inserisci_capacita">Inserisci capacità</string>
    <string name="inserisci_nome">Inserisci nome</string>
    <string name="modifica">Modifica</string>
    <string name="cancella_attrezzatura">Pulsante che cancella l\'attrezzatura selezionata</string>
    <string name="cancella">Cancella</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lista_ricette">Lista Ricette</string>
    <string name="birre">Birre</string>
    <string name="crea_ricetta">Crea Ricetta</string>
    <string name="ingredienti">Ingredienti</string>
    <string name="attrezzi">Attrezzi</string>
    <string name="tuoi_ingredienti">I tuoi Ingredienti:</string>
    <string name="bottone_crea_ricetta">Bottone crea ricetta</string>
...
    <string name="no_iingredienti_negativi">Non si possono avere ingredienti negativi</string>
    <string name="nome_ricetta_mancante">Nome ricetta mancante</string>
    <string name="litri_birra_ricetta_mancante">Litri di birra mancanti</string>
    <string name="ingredienti_ricetta_mancanti">Scegli più ingredienti</string>
    <string name="attrezzi_dati_inaccettabili">Dati inseriti inaccettabili</string>
    <string name="annulla">Annulla</string>
    <string name="brewToday">BrewToday</string>
    <string name="termina">Termina</string>
    <string name="bottone_meno">Bottone -</string>
    <string name="bottone_piu">bottone +</string>
    <string name="termina_produzione_birra">Termina produzione birra</string>
    <string name="prepara">Prepara</string>
    <string name="l_di_questa_birra">L di questa birra</string>
...
